releases/staging/verdaccio.yaml
---
apiVersion: extensions/v1beta1
kind: Ingress
metadata:
  name: verdaccio-ingress-w-auth
  namespace: staging
  annotations:
    kubernetes.io/ingress.class: nginx
    kubernetes.io/tls-acme: "true"
    external-dns.alpha.kubernetes.io/hostname: ver.sdp.handlel.app.
    nginx.ingress.kubernetes.io/auth-url: "https://$host/oauth2/auth"
    nginx.ingress.kubernetes.io/auth-signin: "https://$host/oauth2/start?rd=$escaped_request_uri"
spec:
  rules:
  - host: ver.sdp.handlel.app
    http:
      paths:
      - path: /
        backend:
          serviceName: verdaccio-verdaccio
          servicePort: 4873
  tls:
  - hosts:
    - ver.sdp.handlel.app
    secretName: ver-sdp-handlel-app-tls
---
apiVersion: extensions/v1beta1
kind: Ingress
metadata:
  name: oauth2-proxy
  namespace: staging
spec:
  rules:
  - host: ver.sdp.handlel.app
    http:
      paths:
      - backend:
          serviceName: oauth2-proxy-service
          servicePort: 4180
        path: /oauth2
  tls:
  - hosts:
    - ver.sdp.handlel.app
    secretName: ver-sdp-handlel-app-tls
